Bug 1784876 - Fix rollup code for moved-to-rect popups. r=stransky

When we move-to-rect we call nsMenuPopupFrame::MoveTo, which causes our
anchor type to be a point. However, we still want to check the original
anchor node for rollups (the button in this case).

Differential Revision: https://phabricator.services.mozilla.com/D156090